--- a/components/saint/Filter/styles.module.scss
+++ b/components/saint/Filter/styles.module.scss
@@ -22,7 +22,7 @@ $color: rgb(70, 63, 113);
     color: rgb(233, 230, 253);
     text-shadow: -1px 0 $color, 0 1px $color, 1px 0 $color,
       0 -1px $color;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 0.25px;
     font-size: 13px;
     text-align: left;
@@ -138,19 +138,19 @@ $color: rgb(70, 63, 113);
       }
 
       .name {
-        font-weight: 600;
+        font-weight: 400;
         text-transform: capitalize;
+        letter-spacing: 0.5px;
       }
 
       .count {
-        border-radius: 50%;
-        height: 15px;
-        width: 15px;
+        border-radius: 3px;
+        padding: 0px 5px;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 9px;
-        font-weight: 700;
+        font-size: 11px;
+        font-weight: 600;
         line-height: 15px;
         background-color: var(--gold);
         color: var(--violet);
