--- a/components/global/ButtonFilter/styles.module.scss
+++ b/components/global/ButtonFilter/styles.module.scss
@@ -8,6 +8,7 @@
   transition: all 0.1s ease-in-out;
   background-color: #521613;
   padding: 6px 15px;
+  min-height: 35px;
   border-radius: 7px;
   letter-spacing: 0.25px;
   border: 2px solid #3f3e3e;
@@ -19,20 +20,20 @@
   }
 
   .name {
-    font-weight: 600;
+    font-weight: 400;
     text-transform: capitalize;
+    letter-spacing: 0.5px;
   }
 
   .count {
-    border-radius: 50%;
-    height: 15px;
-    width: 15px;
+    border-radius: 4px;
+    padding: 0px 5px;
     display: flex;
     justify-content: center;
+
     align-items: center;
-    line-height: normal;
-    font-size: 9px;
-    font-weight: 700;
+    font-size: 11px;
+    font-weight: 600;
     background-color: var(--gold);
     color: var(--violet);
   }
