--- a/components/global/ButtonPreset/styles.module.scss
+++ b/components/global/ButtonPreset/styles.module.scss
@@ -17,7 +17,7 @@
     rgba(36, 30, 78, 1) 0%,
     rgba(49, 45, 76, 1) 100%
   );
-  font-weight: 600;
+  font-weight: 400;
   font-size: 16px;
   color: rgb(233, 230, 253);
   line-height: 1.1;
@@ -28,12 +28,10 @@
   }
 
   .count {
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
+    border-radius: 5px;
+    padding: 2px 5px;
     font-size: 13px;
-    font-weight: 800;
-    line-height: normal;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
