--- a/components/global/SaintDetail/styles.module.scss
+++ b/components/global/SaintDetail/styles.module.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   background-color: rgb(11, 7, 43);
   border-radius: 20px;
-  border: 1px solid black;
 
   @include breakpoint(tablet) {
     flex-direction: row;
@@ -13,44 +12,27 @@
     border-radius: 0;
   }
 
-  .row > * {
-    display: inline;
+  .summary {
+    width: 100%;
+    min-width: 300px;
+    z-index: 2;
+    position: relative;
+
+    @include breakpoint(tablet) {
+      width: 300px;
+    }
   }
 
-  .header {
-    width: 100%;
-    display: flex;
-    gap: 20px;
+  .teachings {
+    margin-top: -30px;
 
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 7px;
-
-      .tag {
-        padding: 2px 10px;
-        background-color: #ccad00;
-        font-size: 12px;
-        font-weight: 500;
-        letter-spacing: 0.5px;
-        border-radius: 4px;
-        color: #0f0f10ab;
-        min-width: fit-content;
-      }
+    @include breakpoint(tablet) {
+      margin-left: -10px;
+      margin-top: 30px;
     }
 
-    .image {
-      min-width: 100px;
-      height: 150px;
-      overflow: hidden;
-      border-top-right-radius: 10px;
-      border-top-left-radius: 10px;
-
-      img {
-        transition: transform 0.5s ease;
-        object-fit: cover;
-        object-position: 50% 10%;
-      }
+    @include breakpoint(laptop) {
+      margin-top: 40px;
     }
   }
 }
