--- a/components/saint/ExtraInfo/styles.module.scss
+++ b/components/saint/ExtraInfo/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: blue;
+  background-color: #ccebd9;
   border-radius: 10px;
   padding: 20px;
   gap: 10px;
