--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -123,6 +123,13 @@
     align-items: center;
   }
 
+  .colCenter {
+    justify-content: center;
+    flex: 1;
+    display: flex;
+    align-items: center;
+  }
+
   .colRight {
     justify-content: flex-end;
     flex: 1;
@@ -132,7 +139,7 @@
 }
 
 .navigation {
-  gap: 0;
+  gap: 5px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -140,7 +147,6 @@
   height: 50px;
 
   @include breakpoints.breakpoint(tablet) {
-    gap: 10px;
     width: unset;
     justify-content: space-between;
     flex-direction: row;
@@ -148,12 +154,13 @@
   }
 
   a {
-    color: #000;
-    font-size: 16px;
+    color: #464646;
+    font-size: 14px;
     padding: 4px 10px;
     font-weight: 500;
     letter-spacing: 0.5px;
     transition: all 0.2s ease-in-out;
+    letter-spacing: -0.3px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -164,7 +171,7 @@
 
     @include breakpoints.breakpoint(tablet) {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       width: min-content;
       font-size: 16px;
       gap: 6px;
@@ -219,6 +226,7 @@
 
     .count {
       color: #fff;
+      font-size: 20px;
     }
   }
 }
