--- a/components/page/Search/styles.module.scss
+++ b/components/page/Search/styles.module.scss
@@ -5,109 +5,121 @@
 .search {
   position: relative;
   display: none;
+  width: 400px;
+  height: 40px;
 
   @include breakpoints.breakpoint(laptop) {
     display: block;
   }
 
-  .input {
-    width: 300px;
-    height: 32px;
-    border-radius: 5px;
-    border: 1px solid #dee2e6;
-    font-size: 14px;
-    outline: none;
-    padding-left: 10px;
-    font-weight: 400;
-    transition: width 0.3s ease-in-out;
-  }
-
-  .inputWrapper {
-    position: relative;
-  }
-
-  svg {
-    position: absolute;
-    top: 28%;
-    right: 15px;
-    font-size: 15px; /* Adjust based on your design preference */
-  }
-
-  .dropdownContent {
-    display: block;
-    position: absolute;
-    background-color: white;
-    min-width: 300px;
-    border: 1px solid #ddd;
-    z-index: 1000;
-    right: 0;
-    top: 45px;
-    width: fit-content;
-    border-radius: 5px;
-    transition: opacity 0.25s ease-in-out;
-
-    &:empty {
-      opacity: 0;
-      border: none;
-    }
-  }
-
-  .dropdownContent .result {
-    color: black;
-    text-decoration: none;
-    display: block;
-    cursor: pointer;
-    height: 65px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    width: fit-content;
+  .searchContainer {
     width: 100%;
-    border-bottom: 1px solid #dee2e6;
-
-    &:first-child {
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-    }
-
-    &:last-child {
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-    }
-
-    &:hover {
-      background-color: #dee2e6;
-    }
-
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-
-  .profile {
-    height: 50px;
-    width: 50px;
-    min-width: 50px;
-    border-radius: 50%;
-    margin: 0 15px;
+    border-radius: 22px;
+    border: 1px solid #dee2e6;
     overflow: hidden;
-  }
+    transition: all 0.3s ease-in-out;
+    background-color: white;
 
-  .info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 3px;
-  }
+    &:has(input:focus) {
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
 
-  .name {
-    font-weight: 600;
-    color: #333a3f;
-    line-height: 1.2;
-  }
+    .inputWrapper {
+      position: relative;
+      height: 38px;
 
-  .dates {
-    font-size: 13px;
-    color: #7f7f7f;
+      .input {
+        font-size: 16px;
+        outline: none;
+        padding-left: 45px;
+        font-weight: 400;
+        border: none;
+        height: 38px;
+        width: 100%;
+        border-radius: 22px;
+        overflow: hidden;
+      }
+
+      svg {
+        position: absolute;
+        top: 28%;
+        left: 15px;
+        font-size: 15px;
+      }
+    }
+
+    .dropdownContent {
+      display: block;
+      background-color: white;
+      width: 100%;
+      z-index: 1000;
+      margin-top: 10px;
+      //transition: opacity 0.25s ease-in-out;
+
+      &:empty {
+        opacity: 0;
+        border: none;
+        display: none;
+      }
+    }
+
+    .dropdownContent .result {
+      color: black;
+      text-decoration: none;
+      display: block;
+      cursor: pointer;
+      height: 65px;
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      width: fit-content;
+      width: 100%;
+      border-bottom: 1px solid #dee2e6;
+
+      &:first-child {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+      }
+
+      &:hover {
+        background-color: #dee2e6;
+      }
+
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+
+    .profile {
+      height: 50px;
+      width: 50px;
+      min-width: 50px;
+      border-radius: 50%;
+      margin: 0 15px;
+      overflow: hidden;
+    }
+
+    .info {
+      display: flex;
+      flex-direction: column;
+      margin-top: 3px;
+    }
+
+    .name {
+      font-weight: 600;
+      color: #333a3f;
+      line-height: 1.2;
+    }
+
+    .dates {
+      font-size: 13px;
+      color: #7f7f7f;
+    }
   }
 
   /* Show the dropdown menu on hover */
