--- a/components/global/BentoSection/styles.module.scss
+++ b/components/global/BentoSection/styles.module.scss
@@ -4,37 +4,79 @@
 .bentoSection {
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
-  font-weight: 400;
-  border-radius: 10px;
   margin-bottom: 30px;
   position: relative;
-  width: 100%;
+
   cursor: pointer;
   flex: 1;
+  margin-bottom: 50px;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 50px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  padding: 30px 40px;
+  border-radius: 10px;
+  width: 100vw;
+  margin-left: -20px;
+
+  @include breakpoints.breakpoint(tablet) {
+    width: 100%;
+    margin-left: unset;
+  }
+
+  @include breakpoints.breakpoint(laptop) {
+    padding: 40px 50px;
+  }
 
   .header {
-    background-image: linear-gradient(
-      90deg,
-      var(--violet),
-      #343146
-    );
-    background-size: cover;
-    padding: 0 20px;
-    display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-end;
     position: relative;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
     overflow: hidden;
+    padding-right: 30px;
+    display: none;
 
     @include breakpoints.breakpoint(tablet) {
-      padding: 0 30px;
+      display: flex;
+      width: 33%;
     }
 
     @include breakpoints.breakpoint(laptop) {
-      padding: 0 40px;
+      display: none;
+    }
+
+    @include breakpoints.breakpoint(laptopM) {
+      display: flex;
+      width: 33%;
+      max-width: 300px;
+    }
+
+    .chapters {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 0.7rem;
+      width: 100%;
+      font-size: 0;
+      position: relative;
+      z-index: 3;
+      margin-top: 40px;
+
+      .chapter {
+        color: #999;
+        font-size: 15px;
+        line-height: 1.5;
+        font-weight: 400;
+        width: fit-content;
+        text-wrap: pretty;
+
+        &:first-child {
+          color: #222;
+          border-bottom: 1px solid var(--gold);
+        }
+
+        &:last-child {
+          border: none;
+        }
+      }
     }
   }
 
@@ -47,55 +89,23 @@
     float: left;
   }
 
-  .chapters {
-    display: inline-block;
-    flex-wrap: wrap;
-    width: 100%;
-    font-size: 0;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    position: relative;
-    z-index: 3;
-
-    .chapter {
-      color: var(--gold);
-      margin-right: 10px;
-      font-size: 16px;
-      height: 10px;
-      font-weight: 500;
-      border-right: 2px solid #fff;
-      padding-right: 10px;
-
-      @include breakpoints.breakpoint(tablet) {
-        font-size: 17px;
-      }
-
-      &:last-child {
-        border: none;
-      }
-    }
-  }
-
   .content {
     display: flex;
     background-color: #fff;
+    gap: 75px;
+    max-height: 500px;
+
+    @include breakpoints.breakpoint(tablet) {
+      gap: 50px;
+    }
   }
 
   .previewContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-weight: 400;
     flex: 1;
-    padding: 20px;
-    float: left;
-
-    @include breakpoints.breakpoint(tablet) {
-      padding: 20px 30px;
-    }
-
-    @include breakpoints.breakpoint(laptop) {
-      padding: 30px 40px;
-    }
 
     .preview {
       width: 100%;
@@ -105,19 +115,13 @@
       overflow: hidden;
       flex: 1;
 
-      @include breakpoints.breakpoint(tablet) {
-        -webkit-line-clamp: 16;
-      }
-
-      @include breakpoints.breakpoint(laptop) {
-        -webkit-line-clamp: 14;
-      }
-
       h2 {
         font-size: 18px;
         color: var(--violet);
         font-weight: 600;
         margin-top: 20px;
+        text-decoration: underline;
+        margin-bottom: 20px;
 
         &:first-child {
           margin-top: 0;
@@ -139,12 +143,11 @@
       ul {
         font-size: 16px;
         margin-bottom: 10px;
-        color: #565656;
+        color: #333;
       }
 
       strong {
-        color: #000;
-        font-weight: 600;
+        font-weight: 400;
       }
     }
   }
@@ -152,30 +155,34 @@
   .footer {
     display: flex;
     justify-content: flex-start;
-    padding: 5px 20px 30px 20px;
     align-items: center;
-    background-color: #fff;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    overflow: hidden;
-    margin-top: -1px;
+    position: relative;
 
-    @include breakpoints.breakpoint(tablet) {
-      padding: 0 50px 30px 50px;
-      justify-content: flex-end;
-      margin-top: 0;
+    &::before {
+      position: absolute;
+      content: '';
+      top: -125px;
+      left: 0;
+      width: 100%;
+      z-index: 10;
+      height: 125px;
+      background: linear-gradient(
+        to top,
+        white 10%,
+        transparent 100%
+      );
     }
   }
 
   button {
     background: transparent;
     border-radius: 7px;
-    color: var(--violet);
+    color: #737373;
     font-size: 13px;
     padding: 8px 30px;
-    border: 1px solid var(--gold);
+    border: 1px solid #dedede;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 0.5px;
     display: flex;
     justify-content: space-between;
@@ -184,7 +191,9 @@
     transition: all 0.2s ease-in-out;
 
     &:hover {
-      background-color: var(--gold);
+      background-color: #3187e3;
+      border: 1px solid #3187e3;
+      color: #fff;
     }
   }
 }
