--- a/components/novenas/NovenaSection/styles.module.scss
+++ b/components/novenas/NovenaSection/styles.module.scss
@@ -4,7 +4,7 @@
 .bentoSection {
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 50px;
   font-weight: 400;
   border-radius: 10px;
   margin-bottom: 30px;
@@ -25,8 +25,7 @@
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     overflow: hidden;
 
     @include breakpoints.breakpoint(tablet) {
