--- a/components/saint/PrayersC/styles.module.scss
+++ b/components/saint/PrayersC/styles.module.scss
@@ -1,7 +1,7 @@
 @use './../../../styles/breakpoints.scss' as breakpoints;
 
 .prayers {
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 50px;
   border-radius: 10px;
   padding: 20px;
 
@@ -58,7 +58,7 @@
         background-color: #000;
         border-radius: 3px;
         padding: 3px 12px;
-        font-size: 14px;
+        font-size: 15px;
         font-weight: 600;
         text-decoration: underline;
       }
@@ -68,6 +68,10 @@
       width: 100%;
       height: 350px;
       position: absolute;
+
+      img {
+        border-radius: 10px;
+      }
     }
   }
 }
