--- a/components/saint/Quotes/styles.module.scss
+++ b/components/saint/Quotes/styles.module.scss
@@ -32,7 +32,7 @@
     font-size: 15px;
     line-height: 1.4;
     text-align: left;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 
   .footer {
@@ -40,6 +40,10 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: flex-start;
+
+    &:not(:has(.authorContainer)) {
+      display: block;
+    }
 
     .authorContainer {
       display: flex;
@@ -56,7 +60,7 @@
       }
 
       .author {
-        font-size: 14px;
+        font-size: 15px;
         color: #353535;
         line-height: 1.1;
         font-weight: 600;
