--- a/components/saint/Relics/styles.module.scss
+++ b/components/saint/Relics/styles.module.scss
@@ -1,45 +1,52 @@
 @use './../../../styles/breakpoints.scss' as breakpoints;
 
 .relics {
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 50px;
   border-radius: 10px;
-  padding: 20px;
+  padding: 40px;
   display: flex;
-  gap: 20px;
+  gap: 30px;
   flex-direction: column;
+  width: 100vw;
+  margin-left: -20px;
+  color: #333;
+  font-size: 16px;
 
   @include breakpoints.breakpoint(tablet) {
     padding: 40px;
+    width: 100%;
+    margin-left: 0;
   }
 
   @include breakpoints.breakpoint(laptopM) {
     flex-direction: row;
-    gap: 40px;
+    gap: 70px;
+  }
+
+  .description {
+    @include breakpoints.breakpoint(laptopM) {
+      width: 50%;
+    }
   }
 
   .image {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 50%;
 
     img {
-      border-radius: 5px;
-      margin-bottom: 10px;
+      border-radius: 10px;
+      margin-bottom: 5px;
+      object-fit: cover;
+      box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
     }
 
     .location {
-      text-decoration: wavy;
-    }
-  }
+      font-size: 15px;
 
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
-    h4 {
-      margin-bottom: 5px;
+      @include breakpoints.breakpoint(laptopM) {
+        text-align: right;
+      }
     }
   }
 }
