--- a/components/saint/SectionTitle/styles.module.scss
+++ b/components/saint/SectionTitle/styles.module.scss
@@ -13,14 +13,9 @@
   }
 
   .title {
-    font-size: 20px;
-    background-image: linear-gradient(
-      90deg,
-      var(--violet),
-      #48455f
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    font-size: 16px;
+    color: #333;
+    font-weight: 700;
   }
 
   &.inRightRail .title,
