--- a/app/saints/[slug]/styles.module.scss
+++ b/app/saints/[slug]/styles.module.scss
@@ -117,4 +117,57 @@
   padding: 30px 0 50px 0;
   display: flex;
   flex-direction: column;
+
+  .text {
+    border-top: 1px solid #ccad004d;
+    margin-top: 2.5rem;
+    padding-top: 2rem;
+  }
+
+  .text {
+    h2 {
+      font-size: 22px;
+      margin-top: 30px;
+      color: var(--violet);
+      font-weight: 450;
+      margin-bottom: 8px;
+      line-height: 1.1;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    h3 {
+      margin: 30px 0 10px 0;
+    }
+
+    h4 {
+      font-weight: 550;
+    }
+
+    strong {
+      color: #000;
+      font-weight: 600;
+    }
+
+    p,
+    ul,
+    ol {
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 0.5rem;
+    }
+
+    img {
+      float: left;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      max-width: 50%;
+
+      @include breakpoints.breakpoint(laptop) {
+        margin-right: 30px;
+      }
+    }
+  }
 }
