--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -6,6 +6,7 @@
   // box-shadow: 0px 5px 20px -3px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
   background: rgb(31 28 54);
+  position: relative;
 
   @include breakpoints.breakpoint(tablet) {
     padding: 0;
@@ -199,6 +200,9 @@
 }
 
 .header.transparent {
+  height: 200px;
+  margin-bottom: -100px;
+
   &::before {
     display: block;
     content: '';
@@ -207,7 +211,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: 150px;
+    height: 100%;
     z-index: 0;
     background-image: linear-gradient(
         to top,
