--- a/components/saint/Content/styles.module.scss
+++ b/components/saint/Content/styles.module.scss
@@ -16,11 +16,11 @@
 
   .leftRail {
     @include breakpoints.breakpoint(tablet) {
-      width: 200px;
+      min-width: 200px;
     }
 
     @include breakpoints.breakpoint(laptop) {
-      width: auto;
+      min-width: 300px;
     }
   }
 
@@ -28,79 +28,11 @@
     margin-top: 25px;
 
     @include breakpoints.breakpoint(tablet) {
-      margin-top: 150px;
+      margin-top: 100px;
     }
 
     @include breakpoints.breakpoint(laptop) {
       max-width: calc(100% - 500px);
-    }
-
-    .updated {
-      font-weight: 400;
-      font-size: 15px;
-      color: #999;
-      margin: 15px 0;
-      font-style: italic;
-    }
-
-    h2 {
-      font-size: 22px;
-      margin-top: 30px;
-      color: var(--violet);
-      font-weight: 450;
-      margin-bottom: 8px;
-      line-height: 1.1;
-
-      &:first-child {
-        margin-top: 0;
-      }
-    }
-
-    .text {
-      margin-top: 5px;
-      margin-bottom: 30px;
-
-      @include breakpoints.breakpoint(tablet) {
-        margin-top: 40px;
-        padding-left: 30px;
-        border-left: 1px solid rgb(228, 227, 227);
-      }
-
-      h3 {
-        margin: 30px 0 10px 0;
-      }
-
-      h4 {
-        font-weight: 550;
-      }
-
-      strong {
-        color: #000;
-        font-weight: 600;
-      }
-
-      p,
-      ul,
-      ol {
-        font-size: 15px;
-        line-height: 1.5;
-        margin-bottom: 0.5rem;
-      }
-
-      img {
-        float: left;
-        margin-right: 20px;
-        margin-bottom: 10px;
-        max-width: 50%;
-
-        @include breakpoints.breakpoint(laptop) {
-          margin-right: 30px;
-        }
-      }
-    }
-
-    .text:has(.day-item) {
-      margin-top: 10px;
     }
   }
 
