--- a/components/saint/ReadMoreLinks/styles.module.scss
+++ b/components/saint/ReadMoreLinks/styles.module.scss
@@ -1,10 +1,12 @@
+@use './../../../styles/breakpoints.scss' as breakpoints;
+
 .readMoreLinks {
-  margin-bottom: 30px;
+  cursor: pointer;
 
   .title {
-    font-size: 15px;
-    font-weight: 500;
-    color: var(--gold);
+    font-size: 16px;
+    font-weight: 700;
+    color: #333;
     margin-bottom: 5px;
   }
 
@@ -12,20 +14,29 @@
     transition: all 0.2s ease-in-out;
     border-radius: 5px;
     background-color: aliceblue;
-    padding: 20px 30px;
+    padding: 20px 25px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
+  }
 
-    a {
-      cursor: pointer;
-    }
+  .italics {
+    font-style: italic;
+  }
+
+  svg {
+    margin-left: 5px;
+    font-size: 12px;
   }
 
   .link {
-    font-size: 1rem;
+    font-size: 15px;
     color: var(--violet);
-    font-weight: 500;
-    line-height: 0.9;
+    line-height: 1.7;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
   }
 }
