--- a/app/saints/[slug]/styles.module.scss
+++ b/app/saints/[slug]/styles.module.scss
@@ -111,6 +111,14 @@
   }
 }
 
+.novena_heading {
+  margin-top: 2rem;
+
+  @include breakpoints.breakpoint(laptop) {
+    margin-top: 3rem;
+  }
+}
+
 .SaintBio {
   width: 90%;
   max-width: 1450px;
@@ -122,6 +130,11 @@
     border-top: 1px solid #ccad004d;
     margin-top: 2.5rem;
     padding-top: 2rem;
+
+    &:has(~ h2) {
+      margin-top: 0.5rem;
+      padding-top: 1rem;
+    }
   }
 
   .text {
