--- a/components/saint/PrayersC/styles.module.scss
+++ b/components/saint/PrayersC/styles.module.scss
@@ -26,21 +26,21 @@
       z-index: 2;
       background-color: rgba(0, 0, 0, 0.845);
       margin: 0 auto;
-      border-radius: 5px;
-
-      @include breakpoints.breakpoint(tablet) {
-        width: 60%;
-      }
+      border-radius: 10px;
+      width: 90%;
+      max-width: 500px;
 
       p {
         color: #fff;
         font-size: 20px;
         font-weight: 600;
-        padding: 10px 30px;
+        padding: 15px 20px;
+        line-height: 1.2;
+        text-align: center;
 
         @include breakpoints.breakpoint(tablet) {
           font-size: 30px;
-          padding: 10px 0;
+          padding: 20px 30px;
         }
       }
     }
@@ -56,11 +56,10 @@
       a {
         color: var(--gold);
         background-color: #000;
-        border-radius: 3px;
-        padding: 3px 12px;
+        border-radius: 5px;
+        padding: 3px 15px;
         font-size: 15px;
         font-weight: 600;
-        text-decoration: underline;
       }
     }
 
