mobile style fixes

--- a/app/saints/[slug]/styles.module.scss
+++ b/app/saints/[slug]/styles.module.scss
@@ -12,7 +12,6 @@
   }
 
   .hero {
-    width: 100vw;
     gap: 30px;
     position: relative;
 
@@ -82,7 +81,7 @@
     margin: 0 auto;
     max-width: 1450px;
     width: 90%;
-    gap: 45px;
+    gap: 8%;
     position: relative;
 
     .leftRail {
