--- a/components/global/SaintDetail/styles.module.scss
+++ b/components/global/SaintDetail/styles.module.scss
@@ -5,11 +5,14 @@
   flex-direction: column;
   background-color: rgb(11, 7, 43);
   border-radius: 20px;
+  width: 100%;
+  max-width: 350px;
 
   @include breakpoints.breakpoint(tablet) {
     flex-direction: row;
     background-color: unset;
     border-radius: 0;
+    max-width: unset;
   }
 
   .summary {
@@ -32,7 +35,7 @@
     }
 
     @include breakpoints.breakpoint(laptop) {
-      margin-top: 40px;
+      margin-top: 20px;
     }
   }
 }
