--- a/components/novenas/NovenaSection/styles.module.scss
+++ b/components/novenas/NovenaSection/styles.module.scss
@@ -1,17 +1,22 @@
 @use 'sass:color';
 @use './../../../styles/breakpoints.scss' as breakpoints;
 
-.bentoSection {
+.novenaSection {
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 50px;
   font-weight: 400;
   border-radius: 10px;
-  margin-bottom: 30px;
   position: relative;
   width: 100%;
   cursor: pointer;
   flex: 1;
+  border-radius: 20px;
+
+  @include breakpoints.breakpoint(tablet) {
+    margin-top: 20px;
+    margin-left: -10px;
+  }
 
   .header {
     background-image: linear-gradient(
@@ -20,16 +25,17 @@
       #343146
     );
     background-size: cover;
-    padding: 0 20px;
+    padding: 0 25px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    border-radius: 10px;
     overflow: hidden;
 
     @include breakpoints.breakpoint(tablet) {
       padding: 0 30px;
+      border-bottom-right-radius: 10px;
+      border-top-right-radius: 10px;
     }
 
     @include breakpoints.breakpoint(laptop) {
@@ -52,21 +58,27 @@
     width: 100%;
     font-size: 0;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     position: relative;
     z-index: 3;
 
     .chapter {
+      display: inline-block;
       color: var(--gold);
       margin-right: 10px;
       font-size: 16px;
-      height: 10px;
       font-weight: 500;
       border-right: 2px solid #fff;
       padding-right: 10px;
+      margin-bottom: 10px;
 
       @include breakpoints.breakpoint(tablet) {
         font-size: 17px;
+      }
+
+      @include breakpoints.breakpoint(laptop) {
+        padding-right: 20px;
+        margin-right: 20px;
       }
 
       &:first-child {
@@ -76,6 +88,11 @@
         border-right: none;
         border-radius: 3px;
         font-weight: 600;
+
+        @include breakpoints.breakpoint(laptop) {
+          padding-right: 20px;
+          margin-right: 20px;
+        }
       }
 
       &:last-child {
@@ -94,7 +111,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex: 1;
-    padding: 20px;
+    padding: 20px 25px;
     float: left;
 
     @include breakpoints.breakpoint(tablet) {
@@ -151,15 +168,16 @@
     align-items: center;
     padding: 0 20px;
     background-color: #fff;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     overflow: hidden;
     margin-top: -1px;
+    padding-bottom: 30px;
 
     @include breakpoints.breakpoint(tablet) {
       padding: 0 50px 30px 50px;
       justify-content: flex-end;
-      margin-top: 0;
+      margin-top: 20px;
     }
   }
 
