--- a/components/saint/NameTag/styles.module.scss
+++ b/components/saint/NameTag/styles.module.scss
@@ -62,7 +62,11 @@
 
     @include breakpoints.breakpoint(tablet) {
       margin-bottom: 0;
-      margin-top: 10px;
+      margin-top: 30px;
+    }
+
+    @include breakpoints.breakpoint(laptop) {
+      margin-top: 50px;
     }
 
     p {
