more style improvements

--- a/components/saint/Hero/styles.module.scss
+++ b/components/saint/Hero/styles.module.scss
@@ -8,6 +8,7 @@ $color: #ccad004e;
   position: relative;
   margin-bottom: 30px;
   position: relative;
+  width: 100vw;
 
   &:before {
     content: '';
