--- a/components/page/Page/styles.module.scss
+++ b/components/page/Page/styles.module.scss
@@ -7,6 +7,7 @@
   gap: 1rem;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 
   @include breakpoints.breakpoint(tablet) {
     margin-bottom: 50px;
