--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -13,6 +13,71 @@
     background: unset;
   }
 
+  &.mobileMenuOpen {
+    position: absolute;
+    max-height: -webkit-fill-available;
+    width: 100vw;
+    top: 0;
+    background: linear-gradient(
+      0deg,
+      rgb(4, 2, 16) 15%,
+      rgba(11, 7, 43, 1) 100%
+    );
+    z-index: 10000;
+    animation: open 0.4s forwards;
+
+    .close {
+      display: block;
+    }
+
+    .colLeft,
+    .colCenter {
+      display: none;
+    }
+
+    .navigation {
+      gap: 30px;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding-top: 100px;
+      padding-left: 50px;
+      max-height: 425px;
+    }
+
+    a {
+      color: #fff;
+      font-size: 28px;
+      display: block;
+      opacity: 0;
+      animation: fadeIn 0.4s forwards 0.1s;
+
+      &:first-child {
+        padding-left: 10px;
+      }
+    }
+
+    .misc {
+      display: flex;
+      flex-direction: column;
+      font-size: 18px;
+      border-top: 1px solid #818181;
+      padding-top: 1.5rem;
+      margin: 20px auto;
+      width: 70%;
+      gap: 10px;
+      opacity: 0;
+      animation: fadeIn 0.4s forwards 0.2s;
+
+      a {
+        font-size: 18px;
+
+        &:first-child {
+          padding-left: 0;
+        }
+      }
+    }
+  }
+
   .row {
     display: flex;
     align-items: center;
@@ -20,6 +85,14 @@
     @include breakpoints.breakpoint(laptop) {
       height: 60px;
     }
+  }
+
+  .close {
+    position: absolute;
+    z-index: 100;
+    top: 20px;
+    right: 30px;
+    display: none;
   }
 
   .content {
@@ -30,90 +103,8 @@
     position: relative;
     z-index: 2;
 
-    .close {
-      position: absolute;
-      z-index: 100;
-      top: 20px;
-      right: 30px;
-      display: none;
-    }
-
     .misc {
       display: none;
-    }
-
-    &.mobileMenuOpen {
-      position: absolute;
-      max-height: -webkit-fill-available;
-      width: 100vw;
-      top: 0;
-      background: linear-gradient(
-        0deg,
-        rgb(4, 2, 16) 15%,
-        rgba(11, 7, 43, 1) 100%
-      );
-      z-index: 10000;
-      animation: open 0.4s forwards;
-
-      .close {
-        display: block;
-      }
-
-      .colRight {
-        display: none;
-      }
-
-      .colLeft {
-        flex-direction: column;
-        justify-content: space-between;
-        max-height: -webkit-fill-available;
-
-        svg {
-          display: none;
-        }
-      }
-
-      .navigation {
-        gap: 30px;
-        flex-direction: column;
-        justify-content: flex-start;
-        padding-top: 100px;
-        padding-left: 50px;
-        max-height: 425px;
-      }
-
-      a {
-        color: #fff;
-        font-size: 28px;
-        display: block;
-        opacity: 0;
-        animation: fadeIn 0.4s forwards 0.1s;
-
-        &:first-child {
-          padding-left: 10px;
-        }
-      }
-
-      .misc {
-        display: flex;
-        flex-direction: column;
-        font-size: 18px;
-        border-top: 1px solid #818181;
-        padding-top: 1.5rem;
-        margin: 20px auto;
-        width: 70%;
-        gap: 10px;
-        opacity: 0;
-        animation: fadeIn 0.4s forwards 0.2s;
-
-        a {
-          font-size: 18px;
-
-          &:first-child {
-            padding-left: 0;
-          }
-        }
-      }
     }
   }
 
