--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -116,12 +116,9 @@
       margin: 1rem 0.25rem;
       line-height: 1.5;
 
-      span {
-        margin-left: -4px;
-      }
-
       strong {
-        font-weight: 600;
+        font-weight: 400;
+        text-decoration: underline;
       }
 
       ul {
